--- a/esp32_node_wifi/data/pym.css
+++ b/esp32_node_wifi/data/pym.css
@@ -53,13 +53,21 @@ form {
     transform: rotate(0deg);
 }
 
+.text-input input {
+    width: 300px;
+    height: 25px;
+    margin: 5px;
+    transform-origin: 18px 18px;
+    transform: rotate(0deg);
+}
+
 
 /*FADER NAME*/
 
 .slider-title {
     display: block;
-    padding: 0px 3px;
-    text-align: center;
+    padding: 10px 3px;
+    text-align: left;
 }
 
 h1 {
