--- a/esp32_node_wifi/data/pym.css
+++ b/esp32_node_wifi/data/pym.css
@@ -18,6 +18,26 @@ form {
     text-align: center;
 }
 
+/*LED*/
+.led-green {
+    margin: 20px auto;
+    width: 30px;
+    height: 30px;
+  
+    border-radius: 50%;
+	box-shadow: #000 0 -1px 6px 1px, inset #006 0 -1px 20px, rgb(0, 255, 0) 0 3px 11px;   
+	background-color: rgb(0, 255, 0);
+}
+
+.led-green.active {
+    margin: 20px auto;
+    width: 30px;
+    height: 30px;
+  
+    border-radius: 50%;
+	box-shadow: #000 0 -1px 6px 1px, inset #0F0 0 -1px 20px, rgb(0, 255, 0) 0 3px 11px;   
+	background-color: rgb(0, 255, 0);
+}
 
 /*ALL FADER GROUP*/
 
